...
                                focusManager.clearFocus()
                                keyboardController?.hide()
                            }
                        },
                        modifier = Modifier
                            .size(38.dp)
                            .testTag("header_search_btn")
                    ) {
                        Icon(
                            imageVector = if (isSearchExpanded) Icons.Default.Close else Icons.Default.Search,
                            contentDescription = "Search",
                            tint = if (isSearchExpanded || (searchQuery?.isNotEmpty() == true))
                                MaterialTheme.colorScheme.primary
...
                            cursorBrush = SolidColor(MaterialTheme.colorScheme.primary),
                            keyboardOptions = KeyboardOptions(imeAction = ImeAction.Search),
                            keyboardActions = KeyboardActions(onSearch = { focusManager.clearFocus() }),
                            modifier = Modifier
                                .fillMaxWidth()
                                .focusRequester(focusRequester)
                                .testTag("header_search_input")
                        )
                    }

                    if (!searchQuery.isNullOrEmpty()) {
                        IconButton(
                            onClick = { onSearchQueryChange?.invoke("") },
...
